Fixed navbar item spacing

--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -5,14 +5,14 @@
 }
 
 .appbar-logo {
-  height: 90%;
+  height: 50px;
   object-fit: cover;
   padding-right: 10px;
 }
 
 .appbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   width: 100%;
   height: 64px;
